--- a/sections/find-my-car.liquid
+++ b/sections/find-my-car.liquid
@@ -1,11 +1,49 @@
 <section class="page-width">
-	<form id="fMCDropdownForm">
+	
 		
 		<div class="find_my_car_holder">
 			
-			<div class="find_my_car_title">FIND THE MATS TO FIT YOUR CAR<div class="find_my_car_title_sub">We will then take you to the page to choose your material</div></div>
+			<div class="find_my_car_title">Find the mats to fit your car</div>
 			
+			<div class="find_my_car_title_sub">Search by registration</div>
+			
+			
+			
+			<form id="fMCLookupForm">
+				<div class="grid grid--1-col grid--2-col-tablet grid_centerer">
+					<div class="grid__item">
+						
+						<div class="reg_lookup_holder">
+							<div class="reg_lookup_outer">
+								<input id="fMCLookupInput" type="text" name="" class="reg_lookup_input" value="" aria-required="true" autocorrect="off" autocapitalize="off" placeholder="ENTER YOUR REG" required="">
+							</div>
+						</div>
+						
+						<button type="submit" class="reg_lookup_button" name="commit" id="Subscribe" aria-label="Subscribe">
+							GO
+							<svg viewBox="0 0 14 10" fill="none" aria-hidden="true" focusable="false" role="presentation" class="icon icon-arrow" xmlns="http://www.w3.org/2000/svg" style="width:2.4rem;">
+	<path fill-rule="evenodd" clip-rule="evenodd" d="M8.537.808a.5.5 0 01.817-.162l4 4a.5.5 0 010 .708l-4 4a.5.5 0 11-.708-.708L11.793 5.5H1a.5.5 0 010-1h10.793L8.646 1.354a.5.5 0 01-.109-.546z" fill="currentColor">
+	</path></svg>
 	
+						</button>
+						
+					</div>
+				</div>
+				
+				<div id="fMCLookupResponse"></div>
+				
+			</form>
+			
+			
+			
+			
+			
+			
+			
+			
+			<div class="find_my_car_title_sub">Search by model</div>
+			
+			<form id="fMCDropdownForm">
 			<div class="grid grid--1-col grid--3-col-tablet"> 
 				
 				<div class="grid__item">
@@ -30,37 +68,14 @@
 				</div>
 			
 			</div>
+			</form>
+			
+			
+			<div class="find_my_car_title_sub">We will then take you to the page to choose your material</div>
+			
 				
 		</div>
 		
-	</form>
-	
-	<form id="fMCLookupForm">
-		<div class="grid grid--1-col grid--2-col-tablet grid_centerer">
-			<div class="grid__item">
-				
-				<div class="field">
-					<input id="fMCLookupInput" type="text" name="" class="field__input" value="" aria-required="true" autocorrect="off" autocapitalize="off" placeholder="SEARCH BY REGISTRATION" required="">
-					<label class="field__label" for="NewsletterForm--footer">
-						SEARCH BY REGISTRATION
-					</label>
-					<button type="submit" class="newsletter-form__button field__button" name="commit" id="Subscribe" aria-label="Subscribe">
-						<svg viewBox="0 0 14 10" fill="none" aria-hidden="true" focusable="false" role="presentation" class="icon icon-arrow" xmlns="http://www.w3.org/2000/svg">
-<path fill-rule="evenodd" clip-rule="evenodd" d="M8.537.808a.5.5 0 01.817-.162l4 4a.5.5 0 010 .708l-4 4a.5.5 0 11-.708-.708L11.793 5.5H1a.5.5 0 010-1h10.793L8.646 1.354a.5.5 0 01-.109-.546z" fill="currentColor">
-</path></svg>
-
-					</button>
-				</div>
-				
-				
-				<div id="fMCLookupResponse"></div>
-				
-			</div>
-		</div>
-	</form>
-	
-
-	
 	
 	
 </section>
