--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -26,6 +26,18 @@ src:url("https://use.typekit.net/af/1fe1ce/00000000000000007735aff6/30/l?primer=
 font-display:auto;font-style:normal;font-weight:700;
 }
 
+@font-face{
+	font-display:swap;
+	font-family:registration_plate_ukregular;
+	font-weight:400;
+	font-style:normal;
+	src:url("https://cms.officialcarmats.co.uk/fonts/registration_plate_uk-webfont.eot");
+	src:url("https://cms.officialcarmats.co.uk/fonts/registration_plate_uk-webfont.eot") format("embedded-opentype"),
+		url("https://cms.officialcarmats.co.uk/fonts/registration_plate_uk-webfont.woff") format("woff"),
+		url("https://cms.officialcarmats.co.uk/fonts/registration_plate_uk-webfont.svg") format("svg")
+	}
+
+
 :root {
 	--font-body-family: "din-2014",sans-serif, {{ settings.type_body_font.fallback_families }};
 	--font-body-weight: {{ 300 }};
@@ -250,7 +262,7 @@ there's a separate /assets/section-footer.css included within /sections/footer.l
 
 
 .content-for-layout {
-	background: linear-gradient(180deg, rgba(239,239,239,1) 75%, rgba(92,145,150,1) 100%);
+	background: linear-gradient(180deg, rgba(255,255,255,1) 75%, rgba(92,145,150,1) 100%);
 }
 
 .button, .button-label, .shopify-challenge__button, .customer button {
@@ -337,7 +349,11 @@ h1, h2, h3, h4, h5, .h0, .h1, .h2, .h3, .h4, .h5 {
 	color: rgba(var(--color-base-solid-button-labels));
 }
 .find_my_car_title_sub {
-	font-size: 60%;
+	color: rgba(var(--color-base-solid-button-labels));
+	font-weight: 400;
+	font-size: 70%;
+	line-height: 1;
+	margin-bottom: 1.5rem;
 }
 .find_my_car_select {
 	width: 100%;	
@@ -354,9 +370,17 @@ h1, h2, h3, h4, h5, .h0, .h1, .h2, .h3, .h4, .h5 {
 
 .find_my_car_output {
 	margin-top: 3rem;
+	margin-bottom: 5rem;
+	font-size: 60%;
+	font-weight: 400;
+	color: #fff;
 }
 .find_my_car_output a {
 	margin-top: 3rem;
+	color: #fff;
+}
+.find_my_car_output a:hover {
+	color: rgba(var(--color-base-accent-1));
 }
 
 
@@ -391,6 +415,28 @@ h1, h2, h3, h4, h5, .h0, .h1, .h2, .h3, .h4, .h5 {
 }
 .collection_mats_bg_logo_2 {
 	right: 6%;
+}
+
+
+
+.collection_banner_bg_mobile {
+	width: 100%;
+}
+.collection_banner_bg_desktop {
+	display: none;
+}
+@media screen and (min-width: 750px) {
+	.collection_banner_bg_mobile {
+		display: none;
+	}
+	.collection_banner_bg_desktop {
+		display: block;
+		background-size: cover;
+		background-position: center center;
+		background-color: #000;
+		width: 100%;
+		height: 40rem;
+	}
 }
 
 .manufacturer_banner_bg {
@@ -456,7 +502,7 @@ h1, h2, h3, h4, h5, .h0, .h1, .h2, .h3, .h4, .h5 {
 }
 .models-list_block {
 	display: block;
-	background-color: rgba(var(--color-base-solid-button-labels));
+	background-color: rgba(var(--color-base-background-1));
 	padding: 2rem;
 	text-align: center;
 	width: 100%;
@@ -483,7 +529,7 @@ h1, h2, h3, h4, h5, .h0, .h1, .h2, .h3, .h4, .h5 {
 
 .card-wrapper {
 	flex-direction: row!important;
-	background-color: rgba(var(--color-base-solid-button-labels));
+	background-color: rgba(var(--color-base-background-1));
 	padding: 2rem 1.5rem;
 	height: 100%;
 	transition: background-color ease 300ms;
@@ -629,4 +675,65 @@ h1, h2, h3, h4, h5, .h0, .h1, .h2, .h3, .h4, .h5 {
 .product_value_propositions {
 	margin-top: 5rem!important;
 	margin-bottom: 5rem!important;
+}
+
+.reg_lookup_holder {
+	text-align: center;
+}
+.reg_lookup_outer {
+	position: relative;
+}
+.reg_lookup_outer:after, .reg_lookup_outer:before {
+	content: "";
+	position: absolute;
+	z-index: 1;
+	top: calc(50% - 0.05em);
+	width: 0.2em;
+	height: 0.2em;
+	border-radius: 50%;
+	background: #fdd405;
+	box-shadow: 0 1px 2px rgb(0 0 0 / 80%);
+}
+.reg_lookup_outer:after {
+	right: 1.5rem;
+}
+.reg_lookup_outer:before {
+	left: 1.5rem;
+}
+.reg_lookup_input {
+	font-family: "registration_plate_ukregular";
+	font-size: 40px;
+	text-align: center;
+	background-color: #fdd405;
+	border: none;
+	padding: 2rem;
+	border-radius: 5px;
+	white-space: nowrap;
+	width: 100%;
+}
+.reg_lookup_input::placeholder {
+	opacity: 0.5;
+	color: #000;
+}
+
+.reg_lookup_button {
+	background-color: #fdd405;
+	font-size: 25px;
+	text-align: center;
+	border: none;
+	border-radius: 5px;
+	white-space: nowrap;
+	cursor: pointer;
+	margin-top: 0.5rem;
+	padding: 1rem 2rem;
+}
+.reg_lookup_button:hover {
+	background-color: #fff;
+}
+.reg_lookup_response {
+	color: #fff;
+	font-size: 60%;
+}
+.reg_lookup_response a {
+	color: #fff;
 }
