add lookup to manufacturer pages

--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -438,6 +438,11 @@ h1, h2, h3, h4, h5, .h0, .h1, .h2, .h3, .h4, .h5 {
 		height: 40rem;
 	}
 }
+@media screen and (min-width: 1500px) {
+	.collection_banner_bg_desktop {
+		height: 55rem;
+	}
+}
 
 .manufacturer_banner_bg {
 	background-image: url('{{ "manufacturer_banner_bg.jpg" | asset_url }}');
