--- a/sections/manufacturer-banner.liquid
+++ b/sections/manufacturer-banner.liquid
@@ -60,6 +60,11 @@
 </div>
 
 
+{% render 'find-my-car' %}
+
+
+
+
 <div class="page-width center">
   <h1 class="manufacturer_banner_h1">{{- collection.title | escape -}}</h1>
   
