fixed sports team mobile height

--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -421,6 +421,7 @@ h1, h2, h3, h4, h5, .h0, .h1, .h2, .h3, .h4, .h5 {
 
 .collection_banner_bg_mobile {
 	width: 100%;
+	height: auto;
 }
 .collection_banner_bg_desktop {
 	display: none;
