Improve Read More links

--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -672,7 +672,7 @@ h1, h2, h3, h4, h5, .h0, .h1, .h2, .h3, .h4, .h5 {
 	color: rgba(var(--color-foreground), 0.75);
 }
 .rich-text-readmore:hover {
-	color: #fff;
+	color: rgba(var(--color-base-accent-1));
 }
 .rich-text-remove-top-padding {
 	margin-top: -5rem!important;
